This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: _datetime: Missing NULL check in tzinfo_from_isoformat_results()
Type: behavior Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: belopolsky, benjamin.peterson, izbyshev, miss-islington, p-ganssle, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-08-23 10:14 by izbyshev, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 8869 merged izbyshev, 2018-08-23 10:18
PR 8901 merged miss-islington, 2018-08-24 15:53
Messages (3)
msg323934 - (view) Author: Alexey Izbyshev (izbyshev) * (Python triager) Date: 2018-08-23 10:14
The return value of new_delta() is not checked for NULL at https://github.com/python/cpython/blob/ccd99752675042bd5f67d332c5b0ed85ba1f2da3/Modules/_datetimemodule.c#L1292 and then dereferenced.

Reported by Svace static analyzer.
msg324005 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2018-08-24 15:53
New changeset 498845368ff0f6238750ab1d443e7cf4ec98ccd2 by Benjamin Peterson (Alexey Izbyshev) in branch 'master':
closes bpo-34471: _datetime: Add missing NULL check to tzinfo_from_isoformat_results. (GH-8869)
https://github.com/python/cpython/commit/498845368ff0f6238750ab1d443e7cf4ec98ccd2
msg324006 - (view) Author: miss-islington (miss-islington) Date: 2018-08-24 16:14
New changeset c7f543520161b895796a571881da74e805d0b1eb by Miss Islington (bot) in branch '3.7':
closes bpo-34471: _datetime: Add missing NULL check to tzinfo_from_isoformat_results. (GH-8869)
https://github.com/python/cpython/commit/c7f543520161b895796a571881da74e805d0b1eb
History
Date User Action Args
2022-04-11 14:59:05adminsetgithub: 78652
2018-08-24 16:14:01miss-islingtonsetnosy: + miss-islington
messages: + msg324006
2018-08-24 15:53:27miss-islingtonsetpull_requests: + pull_request8372
2018-08-24 15:53:23benjamin.petersonsetstatus: open -> closed

nosy: + benjamin.peterson
messages: + msg324005

resolution: fixed
stage: patch review -> resolved
2018-08-23 10:18:04izbyshevsetkeywords: + patch
stage: patch review
pull_requests: + pull_request8345
2018-08-23 10:14:40izbyshevcreate