bpo-34471: _datetime: Add missing NULL check to tzinfo_from_isoformat_results()

Reported by Svace static analyzer.